syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message RemotePerpetualTaskClientContext {
  map<string, string> task_client_params = 1;
  google.protobuf.Timestamp last_context_updated = 2;
}